--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   syncfusion_flutter_charts: ^22.1.37
   calendar_date_picker2: ^0.5.2
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
