--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   syncfusion_flutter_charts: ^22.1.37
   calendar_date_picker2: ^0.5.2
   flutter_switch: ^0.3.2
+  firebase_core: ^2.14.0
+  firebase_database: ^10.2.3
 
 dev_dependencies:
   flutter_test:
