--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_switch: ^0.3.2
   firebase_core: ^2.14.0
   firebase_database: ^10.2.3
+  fl_animated_linechart: ^1.1.8
 
 dev_dependencies:
   flutter_test:
