--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_database: ^10.2.3
   fl_animated_linechart: ^1.1.8
+  flutter_bluetooth_serial: ^0.3.2
 
 dev_dependencies:
   flutter_test:
